Added descriptors to info